# trash

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: cargo-audit.yml  cargo-clippy.yml  cargo-fmt.yml  cargo-test.yml  cargo-udeps.yml  release.yml
pkg/brew/: brew-tap.rb
scripts/: create-formula
src/: main.rs
trash-x86_64-apple-darwin/: trash
trash-x86_64-unknown-linux-gnu/: trash
